fixed alignment issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,7 +42,7 @@ header img {
   width: 20em;
 }
 
-.speakers, .itinerary, .planner, .news, .about, .banner,
+.speakers, .itinerary, .planner, .news, .about,
 .overlay, .instructions {
   margin: 5% auto;
 }
@@ -218,7 +218,7 @@ p {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  height: 2.6em;
+  height: 2.4em;
   border: 0.1px black solid;
   width: 10%;
   text-align: center;
@@ -245,8 +245,8 @@ p {
   position: relative;
   float: left;
   display: inline-block;
-  width: 2.55em;
-  height: 2.55em;
+  width: 2.4em;
+  height: 2.4em;
 }
 
 .session-box {
